--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ models/relu3_1
 models/relu4_1
 models/relu5_1
 models/vgg_normalised.t7
+
+*.jpg
+*.png
+*.zip
+.idea/*
+content/*
+saved_model/*
+styles/*
